# low_latency_demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
source/: main.cpp
source/boost/simd/: arithmetic.hpp  bitwise.hpp  boolean.hpp  constant.hpp  ieee.hpp  operator.hpp  predicates.hpp  reduction.hpp  swar.hpp  trigonometric.hpp
source/boost/simd/arch/common/generic/function/: aligned_load.hpp  autodispatcher.hpp  automap.hpp  bitwise_cast.hpp  genmask.hpp  load.hpp
source/boost/simd/arch/common/scalar/constant/: zero.hpp
source/boost/simd/arch/common/scalar/function/: abs.hpp  aligned_load.hpp  aligned_store.hpp  bitwise_notand.hpp  dec.hpp  div.hpp  divides.hpp  genmask.hpp  inc.hpp  load.hpp  minus.hpp  multiplies.hpp  plus.hpp  store.hpp  unary_minus.hpp
source/boost/simd/arch/common/simd/constant/: zero.hpp
source/boost/simd/arch/common/simd/function/: abs.hpp  aligned_load.hpp  aligned_store.hpp  bitwise_cast.hpp  complement.hpp  dec.hpp  div.hpp  divides.hpp  extract.hpp  genmask.hpp  inc.hpp  insert.hpp  load.hpp  make.hpp  minus.hpp  multiplies.hpp  plus.hpp  splat.hpp  store.hpp  unary_minus.hpp
source/boost/simd/arch/common/simd/function/aligned_load/: regular.hpp
source/boost/simd/arch/common/simd/function/store/: regular.hpp
source/boost/simd/detail/: pack_operators.hpp
source/boost/simd/function/: bitwise_not.hpp
source/core/: bench.h  defines.h  exporter.h
source/demo/: color.h  memcpy.h
