cmake_minimum_required(VERSION 3.8)

###################################################################################################
# General project stuff
###################################################################################################
set(PROJECT_NAME low_latency_demo)
project(${PROJECT_NAME})

###################################################################################################
# Include stuff
###################################################################################################
include_directories(source)

###################################################################################################
# Executable stuff
###################################################################################################
set(SOURCES source/main.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
